#4437 - Reduce memory usage for agreement calculation
- Turn agreement calculation into a synchronously running background task so we can see progress in the task monitor
- Add cleanup task to scheduler to remove stopped tasks when sessions end
- Switch tasks to using builder pattern
- Major refactoring of agreement measures and CasDiff