@@ -17,29 +17,21 @@
  */
 package de.tudarmstadt.ukp.inception.ui.agreement.page;
 
-import static de.tudarmstadt.ukp.clarin.webanno.api.casstorage.CasAccessMode.SHARED_READ_ONLY_ACCESS;
-import static de.tudarmstadt.ukp.clarin.webanno.api.casstorage.CasUpgradeMode.AUTO_CAS_UPGRADE;
-import static de.tudarmstadt.ukp.clarin.webanno.model.AnnotationDocumentState.FINISHED;
 import static de.tudarmstadt.ukp.clarin.webanno.model.PermissionLevel.ANNOTATOR;
 import static de.tudarmstadt.ukp.clarin.webanno.model.PermissionLevel.CURATOR;
 import static de.tudarmstadt.ukp.clarin.webanno.model.PermissionLevel.MANAGER;
 import static de.tudarmstadt.ukp.clarin.webanno.ui.core.page.ProjectPageBase.NS_PROJECT;
 import static de.tudarmstadt.ukp.clarin.webanno.ui.core.page.ProjectPageBase.PAGE_PARAM_PROJECT;
 import static de.tudarmstadt.ukp.inception.support.lambda.LambdaBehavior.enabledWhen;
+import static java.util.stream.Collectors.groupingBy;
 
 import java.io.Serializable;
+import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
-import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.commons.lang3.tuple.Pair;
-import org.apache.uima.cas.CAS;
-import org.apache.uima.cas.FeatureStructure;
-import org.apache.uima.fit.util.FSUtil;
 import org.apache.wicket.Component;
 import org.apache.wicket.ajax.AjaxRequestTarget;
 import org.apache.wicket.feedback.IFeedback;
@@ -59,27 +51,28 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.wicketstuff.annotation.mount.MountPath;
 
-import de.tudarmstadt.ukp.clarin.webanno.agreement.measures.AgreementMeasure;
 import de.tudarmstadt.ukp.clarin.webanno.agreement.measures.AgreementMeasureSupport;
 import de.tudarmstadt.ukp.clarin.webanno.agreement.measures.AgreementMeasureSupportRegistry;
 import de.tudarmstadt.ukp.clarin.webanno.agreement.measures.DefaultAgreementTraits;
+import de.tudarmstadt.ukp.clarin.webanno.agreement.task.CalculatePairwiseAgreementTask;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationDocument;
+import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationDocumentState;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationFeature;
-import de.tudarmstadt.ukp.clarin.webanno.model.Project;
-import de.tudarmstadt.ukp.clarin.webanno.model.SourceDocument;
 import de.tudarmstadt.ukp.clarin.webanno.security.UserDao;
-import de.tudarmstadt.ukp.clarin.webanno.security.model.User;
 import de.tudarmstadt.ukp.clarin.webanno.ui.core.page.ProjectPageBase;
 import de.tudarmstadt.ukp.dkpro.core.api.segmentation.type.Token;
 import de.tudarmstadt.ukp.inception.documents.api.DocumentService;
 import de.tudarmstadt.ukp.inception.project.api.ProjectService;
+import de.tudarmstadt.ukp.inception.scheduling.SchedulingService;
+import de.tudarmstadt.ukp.inception.scheduling.TaskScope;
+import de.tudarmstadt.ukp.inception.scheduling.TaskState;
 import de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService;
 import de.tudarmstadt.ukp.inception.support.WebAnnoConst;
 import de.tudarmstadt.ukp.inception.support.help.DocLink;
+import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxBehavior;
 import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxButton;
 import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxFormComponentUpdatingBehavior;
 import de.tudarmstadt.ukp.inception.support.lambda.LambdaChoiceRenderer;
-import de.tudarmstadt.ukp.inception.support.uima.WebAnnoCasUtil;
 
 @MountPath(NS_PROJECT + "/${" + PAGE_PARAM_PROJECT + "}/agreement")
 public class AgreementPage
@@ -87,7 +80,7 @@ public class AgreementPage
 {
     private static final long serialVersionUID = 5333662917247971912L;
 
-    private static final Logger LOG = LoggerFactory.getLogger(AgreementPage.class);
+    private static final Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
     private static final String MID_TRAITS_CONTAINER = "traitsContainer";
     private static final String MID_TRAITS = "traits";
@@ -98,9 +91,11 @@ public class AgreementPage
     private @SpringBean AnnotationSchemaService annotationService;
     private @SpringBean UserDao userRepository;
     private @SpringBean AgreementMeasureSupportRegistry agreementRegistry;
+    private @SpringBean SchedulingService schedulingService;
 
     private AgreementForm agreementForm;
     private WebMarkupContainer resultsContainer;
+    private LambdaAjaxBehavior refreshResultsBehavior;
 
     public AgreementPage(final PageParameters aPageParameters)
     {
@@ -112,7 +107,7 @@ public class AgreementPage
     {
         super.onInitialize();
 
-        User user = userRepository.getCurrentUser();
+        var user = userRepository.getCurrentUser();
 
         requireProjectRole(user, MANAGER, CURATOR);
 
@@ -121,6 +116,44 @@ public class AgreementPage
         add(resultsContainer = new WebMarkupContainer("resultsContainer"));
         resultsContainer.setOutputMarkupPlaceholderTag(true);
         resultsContainer.add(new EmptyPanel(MID_RESULTS));
+
+        // add(new TaskMonitorPanel("runningProcesses") //
+        // .setPopupMode(false) //
+        // .setTypePattern(CalculatePairwiseAgreementTask.TYPE) //
+        // .setKeepRemovedTasks(true));
+        //
+        // refreshResultsBehavior = new LambdaAjaxBehavior(this::actionRefreshResults);
+        // add(refreshResultsBehavior);
+    }
+
+    private CalculatePairwiseAgreementTask getCurrentTask()
+    {
+        var maybeTask = schedulingService.findTask(t -> t instanceof CalculatePairwiseAgreementTask
+                && t.getUser().map(userRepository.getCurationUser()::equals).orElse(false)
+                && getProject().equals(t.getProject()));
+
+        if (maybeTask.isEmpty()) {
+            return null;
+        }
+
+        return (CalculatePairwiseAgreementTask) maybeTask.get();
+
+    }
+
+    private void actionRefreshResults(AjaxRequestTarget aTarget,
+            CalculatePairwiseAgreementTask aTask)
+    {
+        // var task = getCurrentTask();
+        var task = aTask;
+        if (task != null && task.getMonitor().getState() == TaskState.COMPLETED) {
+            AgreementMeasureSupport<?, ?, ?> ams = agreementRegistry.getAgreementMeasureSupport(
+                    agreementForm.measureDropDown.getModelObject().getKey());
+
+            var result = task.getResult();
+            var resultsPanel = ams.createResultsPanel(MID_RESULTS, Model.of(result));
+            resultsContainer.addOrReplace(resultsPanel);
+            aTarget.add(resultsContainer);
+        }
     }
 
     private class AgreementForm
@@ -201,9 +234,10 @@ public class AgreementPage
             // If the currently selected measure is not compatible with the selected feature, then
             // we clear the measure selection.
             AnnotationFeature selectedFeature = featureList.getModelObject();
-            boolean measureCompatibleWithFeature = measureDropDown.getModel()
-                    .map(k -> agreementRegistry.getAgreementMeasureSupport(k.getKey()))
-                    .map(s -> selectedFeature != null && s.accepts(selectedFeature)).orElse(false)
+            boolean measureCompatibleWithFeature = measureDropDown.getModel() //
+                    .map(k -> agreementRegistry.getAgreementMeasureSupport(k.getKey())) //
+                    .map(s -> selectedFeature != null && s.accepts(selectedFeature)) //
+                    .orElse(false) //
                     .getObject();
             if (!measureCompatibleWithFeature) {
                 measureDropDown.setModelObject(null);
@@ -215,34 +249,59 @@ public class AgreementPage
         @SuppressWarnings({ "rawtypes", "unchecked" })
         private void actionRunCalculations(AjaxRequestTarget aTarget, Form<?> aForm)
         {
-            AnnotationFeature feature = featureList.getModelObject();
-            Pair<String, String> measureHandle = measureDropDown.getModelObject();
+            var feature = featureList.getModelObject();
+            var measureHandle = measureDropDown.getModelObject();
 
             // Do not do any agreement if no feature or measure has been selected yet.
             if (feature == null || measureHandle == null) {
                 return;
             }
 
+            var traits = (DefaultAgreementTraits) agreementForm.traitsContainer.get(MID_TRAITS)
+                    .getDefaultModelObject();
+
             AgreementMeasureSupport ams = agreementRegistry
                     .getAgreementMeasureSupport(measureDropDown.getModelObject().getKey());
 
-            AgreementMeasure measure = ams.createMeasure(feature,
-                    (DefaultAgreementTraits) traitsContainer.get(MID_TRAITS)
-                            .getDefaultModelObject());
+            var measure = ams.createMeasure(feature, traits);
 
-            Map<String, List<CAS>> casMap = getCasMap();
+            var states = new ArrayList<AnnotationDocumentState>();
+            states.add(AnnotationDocumentState.FINISHED);
+            if (!traits.isLimitToFinishedDocuments()) {
+                states.add(AnnotationDocumentState.IN_PROGRESS);
+            }
 
-            if (casMap.values().stream().allMatch(list -> list == null || list.isEmpty())) {
+            var allAnnDocs = documentService.listAnnotationDocumentsInState(getProject(), //
+                    states.toArray(AnnotationDocumentState[]::new)).stream() //
+                    .collect(groupingBy(AnnotationDocument::getDocument));
+
+            if (allAnnDocs.isEmpty()) {
                 error("No documents with annotations were found.");
                 aTarget.addChildren(getPage(), IFeedback.class);
-            }
-            else {
-                Serializable result = measure.getAgreement(casMap);
-                resultsContainer.addOrReplace(ams.createResultsPanel(MID_RESULTS, Model.of(result),
-                        AgreementPage.this::getCasMap));
-                aTarget.add(resultsContainer);
+                return;
             }
 
+            var aAnnotators = projectService.listProjectUsersWithPermissions(getProject(),
+                    ANNOTATOR);
+
+            var task = CalculatePairwiseAgreementTask.builder() //
+                    .withSessionOwner(userRepository.getCurrentUser()) //
+                    .withProject(getProject()) //
+                    .withTrigger("Agreement page") //
+                    .withAnnotators(aAnnotators) //
+                    .withTraits(traits) //
+                    .withFeature(feature) //
+                    .withMeasure(measure) //
+                    .withDocuments(allAnnDocs) //
+                    .withScope(TaskScope.LAST_USER_SESSION) //
+                    // When running sync, we cannot cancel because the browser will still be in an
+                    // AJAX request when we try to fire a second one and that second one will fail
+                    // then. This would only work if the cancel action would be sent through
+                    // WebSocket
+                    .withCancellable(false).build();
+
+            schedulingService.executeSync(task);
+            actionRefreshResults(aTarget, task);
         }
 
         List<Pair<String, String>> listMeasures()
@@ -252,15 +311,15 @@ public class AgreementPage
             }
 
             return agreementRegistry.getAgreementMeasureSupports(getModelObject().feature).stream()
-                    .map(s -> Pair.of(s.getId(), s.getName())).collect(Collectors.toList());
+                    .map(s -> Pair.of(s.getId(), s.getName())) //
+                    .toList();
         }
 
         private List<AnnotationFeature> getEligibleFeatures()
         {
-            List<AnnotationFeature> features = annotationService
-                    .listAnnotationFeature(getProject());
-            List<AnnotationFeature> unusedFeatures = new ArrayList<>();
-            for (AnnotationFeature feature : features) {
+            var features = annotationService.listAnnotationFeature(getProject());
+            var unusedFeatures = new ArrayList<AnnotationFeature>();
+            for (var feature : features) {
                 if (feature.getLayer().getName().equals(Token.class.getName())
                         || feature.getLayer().getName().equals(WebAnnoConst.COREFERENCE_LAYER)) {
                     unusedFeatures.add(feature);
@@ -281,93 +340,79 @@ public class AgreementPage
         Pair<String, String> measure;
     }
 
-    // The CASes cannot be serialized, so we make them transient here. However, it does not matter
-    // as we do not access the field directly but via getCases() which will re-load them if
-    // necessary, e.g. if the transient field is empty after a session is restored from a
-    // persisted state.
-    private transient Map<String, List<CAS>> cachedCASes;
-    private transient Project cachedProject;
-    private transient boolean cachedLimitToFinishedDocuments;
+    // private final DropDownChoice<AgreementReportExportFormat> formatField;
 
-    public Map<String, List<CAS>> getCasMap()
-    {
-        if (agreementForm.featureList.getModelObject() == null) {
-            return Collections.emptyMap();
-        }
+    // add(formatField = new DropDownChoice<AgreementReportExportFormat>("exportFormat",
+    // Model.of(CSV), asList(AgreementReportExportFormat.values()),
+    // new EnumChoiceRenderer<>(this)));
+    // formatField.add(new LambdaAjaxFormComponentUpdatingBehavior("change"));
+    //
 
-        Project project = agreementForm.featureList.getModelObject().getProject();
-
-        DefaultAgreementTraits traits = (DefaultAgreementTraits) agreementForm.traitsContainer
-                .get(MID_TRAITS).getDefaultModelObject();
-
-        // Avoid reloading the CASes when switching features within the same project
-        if (cachedCASes != null && project.equals(cachedProject)
-                && cachedLimitToFinishedDocuments == traits.isLimitToFinishedDocuments()) {
-            return cachedCASes;
-        }
-
-        List<User> users = projectService.listProjectUsersWithPermissions(project, ANNOTATOR);
-
-        List<SourceDocument> sourceDocuments = documentService.listSourceDocuments(project);
-
-        cachedCASes = new LinkedHashMap<>();
-        for (User user : users) {
-            List<CAS> cases = new ArrayList<>();
-
-            // Bulk-fetch all source documents for which there is already an annotation document for
-            // the user which is faster then checking for their existence individually
-            List<SourceDocument> docsForUser = documentService
-                    .listAnnotationDocuments(project, user).stream()
-                    .map(AnnotationDocument::getDocument).distinct().collect(Collectors.toList());
-
-            nextDocument: for (SourceDocument document : sourceDocuments) {
-                CAS cas = null;
-
-                try {
-                    if (docsForUser.contains(document)) {
-                        AnnotationDocument annotationDocument = documentService
-                                .getAnnotationDocument(document, user);
-
-                        if (traits.isLimitToFinishedDocuments()
-                                && !annotationDocument.getState().equals(FINISHED)) {
-                            // Add a skip marker (null) for the current CAS to the CAS list - this
-                            // is necessary because we expect the CAS lists for all users to have
-                            // the same size
-                            cases.add(null);
-                            continue nextDocument;
-                        }
-                    }
-
-                    // Reads the user's annotation document or the initial source document -
-                    // depending on what is available
-                    cas = documentService.readAnnotationCas(document, user.getUsername(),
-                            AUTO_CAS_UPGRADE, SHARED_READ_ONLY_ACCESS);
-                }
-                catch (Exception e) {
-                    error("Unable to load data: " + ExceptionUtils.getRootCauseMessage(e));
-                    LOG.error("Unable to load data", e);
-                }
-
-                if (cas != null) {
-                    // Set the CAS name in the DocumentMetaData so that we can pick it
-                    // up in the Diff position for the purpose of debugging / transparency.
-                    FeatureStructure dmd = WebAnnoCasUtil.getDocumentMetadata(cas);
-                    FSUtil.setFeature(dmd, "documentId", document.getName());
-                    FSUtil.setFeature(dmd, "collectionId", document.getProject().getName());
-
-                }
-
-                // The next line can enter null values into the list if a user didn't work on this
-                // source document yet.
-                cases.add(cas);
-            }
-
-            cachedCASes.put(user.getUsername(), cases);
-        }
-
-        cachedProject = project;
-        cachedLimitToFinishedDocuments = traits.isLimitToFinishedDocuments();
-
-        return cachedCASes;
-    }
+    // private Behavior makeDownloadBehavior(final String aKey1, final String aKey2)
+    // {
+    // return new AjaxEventBehavior("click")
+    // {
+    // private static final long serialVersionUID = 1L;
+    //
+    // @Override
+    // protected void onEvent(AjaxRequestTarget aTarget)
+    // {
+    // var download = new AjaxDownloadBehavior(
+    // LoadableDetachableModel.of(PairwiseCodingAgreementTable.this::getFilename),
+    // LoadableDetachableModel.of(() -> getAgreementTableData(aKey1, aKey2)));
+    // getComponent().add(download);
+    // download.initiate(aTarget);
+    // }
+    // };
+    // }
+    //
+    // private AbstractResourceStream getAgreementTableData(final String aKey1, final String aKey2)
+    // {
+    // return new AbstractResourceStream()
+    // {
+    // private static final long serialVersionUID = 1L;
+    //
+    // @Override
+    // public InputStream getInputStream() throws ResourceStreamNotFoundException
+    // {
+    // try {
+    // var result = PairwiseCodingAgreementTable.this.getModelObject().getStudy(aKey1,
+    // aKey2);
+    //
+    // switch (formatField.getModelObject()) {
+    // case CSV:
+    // return AgreementUtils.generateCsvReport(result);
+    // case DEBUG:
+    // return generateDebugReport(result);
+    // default:
+    // throw new IllegalStateException(
+    // "Unknown export format [" + formatField.getModelObject() + "]");
+    // }
+    // }
+    // catch (Exception e) {
+    // // FIXME Is there some better error handling here?
+    // LOG.error("Unable to generate agreement report", e);
+    // throw new ResourceStreamNotFoundException(e);
+    // }
+    // }
+    //
+    // @Override
+    // public void close() throws IOException
+    // {
+    // // Nothing to do
+    // }
+    // };
+    // }
+    //
+    // private String getFilename()
+    // {
+    // return "agreement" + formatField.getModelObject().getExtension();
+    // }
+    //
+    // private InputStream generateDebugReport(FullCodingAgreementResult aResult)
+    // {
+    // var buf = new ByteArrayOutputStream();
+    // AgreementUtils.dumpAgreementStudy(new PrintStream(buf), aResult);
+    // return new ByteArrayInputStream(buf.toByteArray());
+    // }
 }
